# coughvid-spectral

./: .gitignore  READMME.md  coughvid_analysis.ipynb  eval.py  main.py  nn.py  optimize.py  process.py  pyproject.toml
