[project]
name = "coughvid-spectral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=0.3.12",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "optuna>=4.3.0",
    "pandas>=2.3.0",
    "scipy==1.14.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
